<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/remove_ads"
        android:title="@string/remove_ads"
        app:showAsAction="never"/>
    <item
        android:id="@+id/main_setting"
        android:title="@string/pro"
        app:showAsAction="never"/>
    <item
        android:id="@+id/vc_setting"
        android:title="@string/vc_setting"
        app:showAsAction="never"/>
    <item
        android:id="@+id/import_google"
        android:title="@string/import_google"
        app:showAsAction="never"/>
    <item
        android:id="@+id/kill_all"
        android:title="@string/kill_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/rate_us"
        android:title="@string/rate_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/vc_github"
        android:title="Github"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share"
        android:title="Share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/contact_us"
        android:title="Contact US"
        app:showAsAction="never"/>
    <item
        android:id="@+id/switch_version"
        android:title="Switch to Pro"
        app:showAsAction="never"/>
</menu>
