<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close"
        app:tint="#fe7b35"/>
    <FrameLayout
        android:id="@+id/mainBox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/advBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_crown_pw"
                app:tint="#fe7b35"/>
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="32sp"
                android:textColor="#000"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/unlock_unlimited_access"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:layout_marginHorizontal="16dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/advBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/month1"
        app:layout_constraintTop_toBottomOf="@+id/mainBox">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="4dp"
            android:layout_marginHorizontal="24dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:id="@+id/noAdTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_ads"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_no_ad_pw_2"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:id="@+id/autoClean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/premium_features"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_auto_clean_pw_2"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:id="@+id/photoHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/forget_about_limits"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_photo_hide_pw_2"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
    <include
        android:id="@+id/month1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/month3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        layout="@layout/period_pw_2"/>
    <include
        android:id="@+id/month3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/month6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        layout="@layout/period_pw_2"/>
    <include
        android:id="@+id/month6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/year1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        layout="@layout/period_pw_2"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#fe7b35"
        app:layout_constraintBottom_toBottomOf="@+id/year1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/month1"/>
    <include
        android:id="@+id/year1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/premText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        layout="@layout/period_pw_2"/>
    <TextView
        android:textSize="12sp"
        android:textColor="#8d8d91"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/premText"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/premium_text_new"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:textSize="18sp"
        android:id="@+id/continueBtn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/str_continue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:alpha="0.5"
        android:layout_marginHorizontal="16dp"
        app:backgroundTint="#fe7b35"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:id="@+id/privacyBox"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:textSize="12sp"
            android:textColor="#8d8d91"
            android:layout_gravity="center"
            android:id="@+id/privacy"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_police"/>
        <TextView
            android:textSize="12sp"
            android:textColor="#8d8d91"
            android:layout_gravity="center"
            android:id="@+id/terms"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_police"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
